feat: add TCloud number font (#419)
* feat: add tcloud number font

* feat: add tcloud number font

--- a/packages/components/src/styles/reset.less
+++ b/packages/components/src/styles/reset.less
@@ -56,3 +56,11 @@ p {
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: TCloudNumber;
+  src: url("../font/TCloudNumber.ttf");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
