fix: fix demo code height (#453)

--- a/packages/components/src/components/td-doc-demo/style.less
+++ b/packages/components/src/components/td-doc-demo/style.less
@@ -82,7 +82,7 @@
 
     pre {
       margin: 0;
-      padding: 20px 24px;
+      padding: 20px 24px 36px 24px;
       max-height: 560px;
       box-sizing: border-box;
       overflow: auto;
